# whippet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker-publish.yml
src/whippet/: __init__.py  config.py
src/whippet/command_line/: __init__.py
tests/: test_whippet.py
