[metadata]
name = whippet

description = A fast script for simulating using parakeet
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/rosalindfranklininstitute/whippet

project_urls =
    Source=https://github.com/rosalindfranklininstitute/whippet
    Tracker=https://github.com/rosalindfranklininstitute/whippet/issues

author = James Parkhurst

author_email = james.parkhurst@rfi.ac.uk

keywords = 
    EM

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/whippet --doctest-modules -rs
